--- a/styles/components.css
+++ b/styles/components.css
@@ -4,6 +4,7 @@
     border: none;
     padding: 0;
     display: inline-block;
+    vertical-align: top;
 }
 
 .component-card:hover {
